--- a/scripts/cleaning/sumstats_cleaning.Rmd
+++ b/scripts/cleaning/sumstats_cleaning.Rmd
@@ -32,6 +32,8 @@ clParser <- add_option(clParser, c("-t", "--task"), type="character", default="c
                 help="The explicit task to run:\nclean: Clean GWAS sumstat [default %default]")
 clParser <- add_option(clParser, c("-f", "--file"), type="character",
                 help="The file to process")
+clParser <- add_option(clParser, c("-c", "--code"), type="character",
+                help="The code to use for the dataset from the specified file.")
 clParser <- add_option(clParser, c("-n", "--sample-size"), type="numeric",
                 help="Number of individuals in the sample.")
 
@@ -46,6 +48,8 @@ filename.rmd<-"sumstats_cleaning.Rmd"
 
 #explicitly set total N
 cN <- clOptions$`sample-size`
+#setting for keeping or removing indels
+keepIndel<-F
 
 
 ```
@@ -161,6 +165,32 @@ parseSNPColumnAsRSNumber <- function(text){
   return(text)
 }
 
+parseCHRColumn <- function(text){
+  text<-sub(pattern = "^XY",replacement = "25",x = text)
+  text<-sub(pattern = "^X",replacement = "23",x = text)
+  text<-sub(pattern = "^Y",replacement = "24",x = text)
+  text<-sub(pattern = "^MT",replacement = "26",x = text)
+  text<-sub(pattern = "^chr",replacement = "",x = text)
+  return(text)
+}
+
+```
+
+
+
+# Setup common stuff for all datasets
+
+```{r}
+
+filePaths <- clOptions$file
+traitNames <- clOptions$code
+traitCodes <- clOptions$code
+#test or temporary placeholders
+filePaths<-c("/Users/jakz/Documents/local_db/JZ_GED_PHD_ADMIN_GENERAL/data/gwas_sumstats/cleaned/ADHD05.gz")
+traitNames<-c("ADHD 1")
+traitCodes<-c("ADHD05")
+sumstats.meta<-data.table(name=traitNames)
+row.names(sumstats.meta)<-traitCodes
 ```
 
 # Read in sumstats and interpret columns
@@ -170,14 +200,13 @@ parseSNPColumnAsRSNumber <- function(text){
 
 #TODO replace commas with field separators as in Helena's script
 
-filePaths <- clOptions$file
-#test
-#filePaths<-c("/Users/jakz/Documents/local_db/JZ_GED_PHD_ADMIN_GENERAL/data/gwas_sumstats/cleaned/ADHD05.gz")
+cCode <- traitCodes[1]
 cFilePath <- filePaths[1] #we will probably want to have a loop over the provided files
 cSumstats <- read.table(cFilePath,header=T, quote="\"",fill=T,na.string=c(".",NA,"NA",""))
 
 #number of rows before touching the data
 nRowsRaw <- nrow(cSumstats)
+sumstats.meta[cCode,c("n_snp_raw")]<-nRowsRaw
 
 ```
 
@@ -260,6 +289,8 @@ Set N from Ncon and Ncas
 
 Set N from argument
 
+Add columns on sample size, enough for PRS enough for pathway analysis
+
 ```{r add missing columns}
 
 # Save original Z
@@ -275,18 +306,85 @@ if(any(colnames(cSumstats)=="N_CAS") && any(colnames(cSumstats)=="N_CON")) {
   cSumstats$N[which(is.na(cSumstats$N))]<-cN #default behaviour - add explicit N only to missing values.
 } else if(!any(colnames(cSumstats)=="N")) {
   warning("\nNo N column detected!\n")
+  sumstats.meta[cCode,c("noN")]<-T
+}
+
+#Add metadata about enough for PRS and pathway analysis
+sumstats.meta[cCode,c("enough_PRS")]<-any(colnames(cSumstats)=="SNP") & any(colnames(cSumstats)=="P") & (any(colnames(cSumstats)=="BETA") | any(colnames(cSumstats)=="OR") | any(colnames(cSumstats)=="Z") ) & any(colnames(cSumstats)=="A1") & any(colnames(cSumstats)=="A2")
+sumstats.meta[cCode,c("enough_pathwayanalysis")]<-any(colnames(cSumstats)=="SNP") & any(colnames(cSumstats)=="P")
+
+```
+
+
+# Cleaning
+
+##Missing data
+
+Remove variants with missing values
+
+```{r clean missing data}
+
+#clean missing P
+if(any(colnames(cSumstats)=="P")){
+  cond <- is.na(cSumstats$P)
+  sumstats.meta[cCode,c("n_removed_missing_p")]<-sum(cond)
+  cSumstats<-cSumstats[which(!cond),]
+}
+
+#clean missing effect
+if(any(colnames(cSumstats)=="BETA")){
+  cond <- is.na(cSumstats$BETA)
+  sumstats.meta[cCode,c("n_removed_missing_effect")]<-sum(cond)
+  cSumstats<-cSumstats[which(!cond),]
+} else if(any(colnames(cSumstats)=="OR")) {
+  cond <- is.na(cSumstats$OR)
+  sumstats.meta[cCode,c("n_removed_missing_effect")]<-sum(cond)
+  cSumstats<-cSumstats[which(!cond),]
+} else if(any(colnames(cSumstats)=="Z")) {
+  cond <- is.na(cSumstats$Z)
+  sumstats.meta[cCode,c("n_removed_missing_effect")]<-sum(cond)
+  cSumstats<-cSumstats[which(!cond),]
+}
+
+#indels
+if(keepIndel == T){
+  cSumstats$A1 <- as.character(toupper(cSumstats$A1))
+  cSumstats$A2 <- as.character(toupper(cSumstats$A2))
+} else if(keepIndel == F){
+  cSumstats$A1 <- as.character(toupper(cSumstats$A1), c("A", "C", "G", "T"))
+  cSumstats$A2 <- as.character(toupper(cSumstats$A2), c("A", "C", "G", "T"))
+  cond <- is.na(cSumstats$A1) | is.na(cSumstats$A2)
+  sumstats.meta[cCode,c("n_removed_indels")]<-sum(cond)
+  cSumstats<-cSumstats[which(!cond),]
 }
 
 ```
 
-Add columns on sample size, enough for PRS enough for pathway analysis
+
+## Duplicate data
+
+Deal with duplicate variants
+
+```{r clean duplicate data}
+# Remove duplicated variants across SNP, A1 and A2
+if(any(colnames(cSumstats)=="SNP") & any(colnames(cSumstats)=="A1") & any(colnames(cSumstats)=="A2")) {
+  cSumstats.n <- nrow(cSumstats)
+  cSumstats <- unique(cSumstats,by = c("SNP","A1","A2"))
+  umstats.meta[cCode,c("n_removed_indels")]<-cSumstats.n-nrow(cSumstats)
+}
+```
 
 
-?Remove variants with missing values
+
+
+
+
+
+
 
 ?Remove variants based on MAF/FRQ, INFO, OR, p-value, N (Ollies script) filters etc
 
-Deal with duplicate variants
+
 
 Deal with maf and frequencey columns
 
@@ -295,7 +393,7 @@ Add standard errors from beta & z or or & z (Ollies script)
 
 
 
-Add columns on sample size, enough for PRS enough for pathway analysis
+
 
 
 
