--- a/scripts/cleaning/sumstats_cleaning.Rmd
+++ b/scripts/cleaning/sumstats_cleaning.Rmd
@@ -50,6 +50,7 @@ filename.rmd<-"sumstats_cleaning.Rmd"
 cN <- clOptions$`sample-size`
 #setting for keeping or removing indels
 keepIndel<-F
+mhc.filter<-37
 
 
 ```
@@ -178,7 +179,9 @@ parseCHRColumn <- function(text){
 
 
 
-# Setup common stuff for all datasets
+# ****!Setup common stuff for all datasets
+
+THIS IS WHERE YOU SET UP YOUR DATASET SETTINGS! ENTER THE SETTINGS FOR YOUR DATASET AS WAS DONE FOR THE ADHD EXAMPLE GWAS BELOW.
 
 ```{r}
 
@@ -189,7 +192,7 @@ traitCodes <- clOptions$code
 filePaths<-c("/Users/jakz/Documents/local_db/JZ_GED_PHD_ADMIN_GENERAL/data/gwas_sumstats/cleaned/ADHD05.gz")
 traitNames<-c("ADHD 1")
 traitCodes<-c("ADHD05")
-sumstats.meta<-data.table(name=traitNames)
+sumstats.meta<-data.frame(name=traitNames)
 row.names(sumstats.meta)<-traitCodes
 ```
 
@@ -237,6 +240,8 @@ Interpret BGENIE SNP format
 
 Interpret daner like format
 
+Rename duplicate columns
+
 ```{r re-format columns}
 #convert to data frame
 cSumstats <- setDT(cSumstats)
@@ -280,8 +285,39 @@ if(!any(colnames(cSumstats)=="FRQ") & !any(colnames(cSumstats)=="N_CAS") & !any(
   
 }
 
+#deal with duplicate columns - use the first occurrence
+##SNP
+iDup<-grep(pattern = "^SNP$",colnames(cSumstats))
+if(length(iDup)>1){
+  iDup<-iDup[2:length(iDup)]
+  colnames(cSumstats)[iDup]<-"XSNP"
+}
+
+##BP
+if('BP' %in% names(cSumstats)){
+  iDup<-grep(pattern = "^BP$",colnames(cSumstats))
+  if(length(iDup)>1){
+    iDup<-iDup[2:length(iDup)]
+    colnames(cSumstats)[iDup]<-"XBP"
+  }
+}
+
+##FRQ
+if('FRQ' %in% names(cSumstats)){
+  iDup<-grep(pattern = "^FRQ$",colnames(cSumstats))
+  if(length(iDup)>1){
+    iDup<-iDup[2:length(iDup)]
+    colnames(cSumstats)[iDup]<-"XFRQ"
+  }
+}
+
+
 
 ```
+
+
+DO WE WANT TO CONVERT CHR TO NUMERIC VALUES? ^
+
 
 ## Add missing columns
 
@@ -292,11 +328,6 @@ Set N from argument
 Add columns on sample size, enough for PRS enough for pathway analysis
 
 ```{r add missing columns}
-
-# Save original Z
-if(any(colnames(cSumstats)=="Z")){
-  cSumstats$Z_ORIG<-cSumstats$Z
-}
 
 # Add total N depending on columns and input
 if(any(colnames(cSumstats)=="N_CAS") && any(colnames(cSumstats)=="N_CON")) {
@@ -346,17 +377,6 @@ if(any(colnames(cSumstats)=="BETA")){
   cSumstats<-cSumstats[which(!cond),]
 }
 
-#indels
-if(keepIndel == T){
-  cSumstats$A1 <- as.character(toupper(cSumstats$A1))
-  cSumstats$A2 <- as.character(toupper(cSumstats$A2))
-} else if(keepIndel == F){
-  cSumstats$A1 <- as.character(toupper(cSumstats$A1), c("A", "C", "G", "T"))
-  cSumstats$A2 <- as.character(toupper(cSumstats$A2), c("A", "C", "G", "T"))
-  cond <- is.na(cSumstats$A1) | is.na(cSumstats$A2)
-  sumstats.meta[cCode,c("n_removed_indels")]<-sum(cond)
-  cSumstats<-cSumstats[which(!cond),]
-}
 
 ```
 
@@ -370,19 +390,117 @@ Deal with duplicate variants
 if(any(colnames(cSumstats)=="SNP") & any(colnames(cSumstats)=="A1") & any(colnames(cSumstats)=="A2")) {
   cSumstats.n <- nrow(cSumstats)
   cSumstats <- unique(cSumstats,by = c("SNP","A1","A2"))
-  umstats.meta[cCode,c("n_removed_duplicates")]<-cSumstats.n-nrow(cSumstats)
+  sumstats.meta[cCode,c("n_removed_duplicates")]<-cSumstats.n-nrow(cSumstats)
 }
+```
+
+
+
+## Value filters
+
+?Remove variants based on MAF/FRQ, INFO, OR, p-value, N (Ollies script) filters etc
+
+```{r clean based on values}
+
+# P filter
+if(any(colnames(cSumstats)=="P")){
+  rm <- (!is.na(cSumstats$P) & (cSumstats$P>1 | cSumstats$P<0))
+  cSumstats <- cSumstats[!rm, ]
+  cat("Removing ", sum(rm), " SNPs with P < 0 or P > 1; ", nrow(cSumstats), " remain")
+  sumstats.meta[cCode,c("n_removed_p")]<-sum(rm)
+} else {
+  cat("Warning: The dataset does not contain a P column to apply the specified filter on.")
+}
+
+# FRQ filter
+if(any(colnames(cSumstats)=="FRQ")){
+  rm <- (!is.na(cSumstats$FRQ) & (cSumstats$FRQ<0.005 | cSumstats$FRQ>0.995))
+  cSumstats <- cSumstats[!rm, ]
+  cat("Removing ", sum(rm), " SNPs with FRQ <", frq.filter, "; ", nrow(cSumstats), " remain")
+  sumstats.meta[cCode,c("n_removed_frq")]<-sum(rm)
+} else {
+  cat("Warning: The dataset does not contain a FRQ or MAF column to apply the specified filter on.")
+}
+
+# INFO filter
+if(any(colnames(cSumstats)=="INFO")){
+  rm <- (!is.na(cSumstats$INFO) & cSumstats$INFO<0.6)
+  cSumstats <- cSumstats[!rm, ]
+  cat("Removing ", sum(rm), " SNPs with INFO < 0.6; ", nrow(cSumstats), " remain")
+  sumstats.meta[cCode,c("n_removed_info")]<-sum(rm)
+} else {
+  cat("Warning: The dataset does not contain an INFO column to apply the specified filter on.")
+}
+
+# OR filter
+if(any(colnames(cSumstats)=="OR")){
+  rm <- (!is.na(cSumstats$OR) & cSumstats$OR>10000)
+  cSumstats <- cSumstats[!rm, ]
+  cat("Removing ", sum(rm), " SNPs with OR > 10000; ", nrow(cSumstats), " remain")
+  sumstats.meta[cCode,c("n_removed_or")]<-sum(rm)
+} else {
+  cat("Warning: The dataset does not contain an INFO column to apply the specified filter on.")
+}
+
+# N filter - from Ollies script
+if(any(colnames(cSumstats)=="N")){
+  N_sd<-sd(cSumstats$N)
+  N_median<-median(cSumstats$N)
+  rm <- (!is.na(cSumstats$N) & (cSumstats$N > N_median+(3*N_sd) | cSumstats$N < N_median-(3*N_sd)))
+  cSumstats <- cSumstats[!rm, ]
+  cat("Removing ", sum(rm), " SNPs with N outside median(N) +- 3SD(N); ", nrow(cSumstats), " remain")
+  sumstats.meta[cCode,c("n_removed_n")]<-sum(rm)
+}
+
+# SE filter - from Ollies script
+if(any(colnames(cSumstats)=="SE")){
+  rm <- (!is.na(cSumstats$SE) & cSumstats$SE == 0)
+  cSumstats <- cSumstats[!rm, ]
+  cat("Removing ", sum(rm), " SNPs with SE = 0; ", nrow(cSumstats), " remain")
+  sumstats.meta[cCode,c("n_removed_se")]<-sum(rm)
+}
+
+#indels
+if(keepIndel == T){
+  cSumstats$A1 <- as.character(toupper(cSumstats$A1))
+  cSumstats$A2 <- as.character(toupper(cSumstats$A2))
+} else if(keepIndel == F){
+  cSumstats$A1 <- as.character(toupper(cSumstats$A1), c("A", "C", "G", "T"))
+  cSumstats$A2 <- as.character(toupper(cSumstats$A2), c("A", "C", "G", "T"))
+  rm <- (is.na(cSumstats$A1) | is.na(cSumstats$A2))
+  sumstats.meta[cCode,c("n_removed_indels")]<-sum(cond)
+  cSumstats<-cSumstats[!rm,]
+}
+
+
+##remove MHC region based on position - probably better to do after merge/harmonisation with reference
+#references
+#https://www.ncbi.nlm.nih.gov/grc/human/regions/MHC?asm=GRCh37
+#https://www.ncbi.nlm.nih.gov/grc/human/regions/MHC
+if(!is.na(mhc.filter)){
+  if(any(colnames(cSumstats)=="CHR") & any(colnames(cSumstats)=="BP")){
+    if(mhc.filter==37) {
+        rm <- (!is.na(cSumstats$CHR) & !is.na(cSumstats$BP) & cSumstats$CHR=="6" & cSumstats$BP>=28477797 & cSumstats$BP<=33448354)
+        cSumstats <- cSumstats[!rm, ]
+    } else if (mhc.filter==38) {
+        rm <- (!is.na(cSumstats$CHR) & !is.na(cSumstats$BP) & cSumstats$CHR=="6" & cSumstats$BP>=28510120 & cSumstats$BP<=33480577)
+        cSumstats <- cSumstats[!rm, ]
+        cat("Removing ", sum(rm), " SNPs in the GRCh",mhc.filter," MHC; ", nrow(cSumstats), " remain")
+    } else {
+        cat("Warning: Invalid assembly version provided - no filtering of the MHC was done!")
+      }
+  } else {
+    cat("Warning: No chromosome or base-pair position information available - no filtering of the MHC was done!")
+  }
+}
+    
+
 ```
 
 
 
 
 
-
-
-
-
-?Remove variants based on MAF/FRQ, INFO, OR, p-value, N (Ollies script) filters etc
 
 
 
