--- a/scripts/cleaning/sumstats_cleaning.Rmd
+++ b/scripts/cleaning/sumstats_cleaning.Rmd
@@ -581,8 +581,7 @@ Set N from Ncon and Ncas
 Set N from argument
 
 Add columns on sample size, enough for PRS enough for pathway analysis
-
-```{r add missing columns}
+```{r add missing N columns}
 # Add total N depending on columns and input
 if(any(colnames(cSumstats)=="N_CAS") && any(colnames(cSumstats)=="N_CON")) {
   ### Calculate total N from number of cases and number of controls if they are present. Overwrite any specific total N.
@@ -594,10 +593,47 @@ if(any(colnames(cSumstats)=="N_CAS") && any(colnames(cSumstats)=="N_CON")) {
   sumstats.meta[cCode,c("noN")]<-T
 }
 ```
-+++ATK add z column here
 
-+++ add BETA column here 
-+++ add SE column here
+#Add missing Z column 
+```{r insert Z column if missing}
+# if no Z column
+if(any(colnames(cSumstats) == "Z") == 0){
+  cSumstats$Z<-abs(qnorm(cSumstats$P/2)) #calculate Z value using qnorm function then divide by 2
+  }
+  
+  cat("Z column inserted based on P value")
+```
+
+
+# Add missing effect standard errors column 
+If missing, add standard errors from beta & z or OR & z 
+```{r insert SE column if missing}
+
+# if no SE column
+if(any(colnames(cSumstats) == "SE") == 0){ 
+  if(any(colnames(cSumstats) == "BETA") == 1){ #take BETA if BETA column exists
+    cSumstats$SE<-abs(cSumstats$BETA/cSumstats$Z) #calculate SE from BETA and Z
+  } else {
+    cSumstats$SE<-abs(log(cSumstats$OR)/cSumstats$Z) #if no BETA column, calculate SE from odds ratio and Z
+  }
+
+  
+  cat("SE column inserted based on BETA/OR and P")
+  
+  #+++ATK not too sure if we need to add to meta data? or if not necessary? - yes. set SE_from_Z as column and set as T
+
+  }
+```
+
+```{r add BETA column if missing}
+# if no BETA column
+if(any(colnames(cSumstats) == "BETA") == 0){
+    cSumstats$BETA<-log(cSumstats$OR) #calculate BETA from log of OR
+    }
+
+cat("BETA column inserted based on log OR value")
+```
+
 
 ## Meta data
 ```{r add meta data}
@@ -803,41 +839,10 @@ Helena: /mnt/lustre/groups/ukbiobank/sumstats/scripts/submit_freq_2.sh
 
 
 
-#Missing effect standard error
-Add standard errors from beta & z or or & z (Ollies script)
-+++ATK: move above where N column is added and add Z chunk 
-```{r insert SE column if missing}
-
-# if no SE column
-if(any(colnames(cSumstats) == "SE") == 0){ 
-  if(any(colnames(cSumstats) == "BETA") == 1){ #take BETA if BETA column exists
-    cSumstats$Z<-abs(qnorm(cSumstats$P/2)) #calculate Z value using qnorm function - we shouldn't need this step if we are including chunk 
-    cSumstats$SE<-abs(cSumstats$BETA/cSumstats$Z) #calculate SE from BETA and Z
-  } else {
-    cSumstats$Z<-abs(qnorm(cSumstats$P/2)) #calculate Z value
-    cSumstats$SE<-abs(log(cSumstats$OR)/cSumstats$Z) #if no BETA column, calculate SE from odds ratio and Z
-  }
-  
-  cSumstats$Z<-NULL ###do we want to name Z something else here so we don't over write Z values? e.g. Z_for_SE?
-  
-  cat("SE column inserted based on BETA/OR and P")
-  
-  #+++ATK not too sure if we need to add to meta data? or if not necessary? - yes. set SE_from_Z as column and set as T
-
-  }
-```
-
-
 
 #Check and correct for Genomic Control
 
-+++ATK go over in next meeting what to add from Helenas
-Need to add from Helenas:
-Helena: /mnt/lustre/groups/ukbiobank/sumstats/scripts/computeLambdaAndCorrect.r
-
-Added from Ollie's:
-
-Need to calculate BETA 
+Added from Ollie's script:
 ```{r check and correct for genomic control}
 if(any(colnames(cSumstats) == "SE") == 1){
   if(any(colnames(cSumstats) == "OR") == 1){
@@ -888,7 +893,9 @@ if(any(colnames(cSumstats) == "SE") == 1){
 
 
 ```
-
+ 
+Need to add from Helenas (below):
+Helena: /mnt/lustre/groups/ukbiobank/sumstats/scripts/computeLambdaAndCorrect.r
 ```{r genomic control Helena's script}
 ##++++ATK: is there anything we want to add from Helena's below? http://genometoolbox.blogspot.com/2014/08/how-to-calculate-genomic-inflation.html
 #arg <- commandArgs(TRUE)
@@ -910,9 +917,21 @@ if(any(colnames(cSumstats) == "SE") == 1){
 #close(gz1)
 ```
 
-
+# Save cleaned file and log output
 +++CH: Here the script should end and a cleaned version of the file should be written into the cleaned folder
+```{r save cleaned file as .gz file in cleaned folder}
+cSumstats %>%
+  gzfile(
+    file = paste0("../cleaned/", cCode, ".gz", sep="\t"))
+
+```
+
 +++CH: Additionally, a log file should be created and be saved in the log file folder
+```{r create log file and save in log file folder}
+
+```
+
+
 
 ?Read in reference from plink formats
 ```{r read in reference}
@@ -1968,121 +1987,5 @@ ldsc.mod <- function(traits, sample.prev, population.prev, ld, wld,
 ```
 
 
-```{r check mhc removed }
 
-
-```
-
-```{r check traits significantly h2}
-
-```
-
-3) Read in rg data for your trait of interest\
-```{r read in rg results}
-
-```
-
-```{r select rg results from log out put files}
-
-```
-
-2) Joining datasets:
-#Step) join the rg results with the GWAS information file to get full GWAS info for each trait
-Merge 
-```{r join info GWAS sheet with rg results}
-
-```
-
-3) Filtering
-For both summary table for plotting and supplementary table:
-#step) Only extract GWAS traits that are not private. 
-Filter by permissions and exclude all private sumstats
-NOTE: need to simplify the current permissions category 
-```{r filter based on permissions}
-
-```
-
-```{r by trait cateogry}
-
-```
-
-#step) Filter p-values by bonferonni threshold 
-Adapt Helena's script in python that already exists calculating bonferonni significance?
-Create a new data frame with only bonf signif traits for summary table for paper plotting of top traits? or just add a new column with 'yes/no' for bonferonnni significant? Johan's preference: stick to one dataframe and filter in the plotting step
-For supplementary table: how do we want to indicate which traits are bonferonni significant? e.g. bold text? A separate column saying 'significant/ non significant'? Colours??
-```{r create bonferonni column}
-
-```
-
-```{r create FDR column }
-
-```
-
-```{r convert table to matrix for matrix decomposition}
-
-```
-
-note: we already have this script in python
-```{r matrix decomposition for bonferonni threshold}
-
-```
-
-Create new dataframes for supplmentary tables
-
-#create supplementary tables
-Select columns for supplementary tables for paper. Decide on columns. 
-e.g. Watson et al 2019 (AN GWAS) columns: Phenotype, rg, se, P (green = bonferoni significant), Phenotype category, PMID, code, ancestry. 
-but could also include Z value of rg, gcov_int, gcov_int_se, h2_obs, h2_obs_se, h2_int	h2_int_se - or h2 Z and mean chi square which could be useful? Topher has a script that extracted h2 information for each GWAS
-```{r create dataframe for supplementary tables}
-
-```
-
-4) Saving new tables
-#what is the preffered format for saving the new table? google sheets? excel sheet for supplementary materials? Save summary table as rds for plotting?
-Save as excel, google sheets, txt
-```{r save supplementary table}
-
-```
-
-5) Plotting
-Decide on significance threshold for plotting. Note: matrix decomposition threshold as less stringent.
-
-Note: trait labels for plotting. This needs to be added to in the google spreadsheet, and then trait labels column for plotting will be used in stead of 'phenotype'
-
-We also have multiple GWAS for one phenotype e.g. MDD - 
-```{r vector of signficant traits for plotting}
-# i.e. the researcher may only want to show specific GWAS for each phenotype e.g. most powerful, or certain cohorts, selected based on type of phenotyping. A
-```
-
-
-```{r filter based on vector of traits}
-
-```
-
-
-```{r create dataframe for plotting}
-#filtering: 1) matrix decomposition 2) vector of selected traits for plotting
-```
-
-Use AN GWAS plot script (Watson et al 2019)
-```{r plot rg results}
-
-```
-
-Publication table
-```{r dataframe for publication table of significant rg traits}
-
-```
-
-save in excel format
-```{r save publication table}
-
-```
- 
-What output do we want from this script?
-1) a general filtered summary table with full GWAS information for each trait (permissions, column significant)
-2) an rg plot with top traits
-3) a supplementary table with selected columns for paper (all traits, except traits with private permissions)
-note: at some point we want to filter by heritability. But do we want this at an earlier step so that we are not running rg with traits that aren't significantly heritable?
-4) Publication table - significant ones (instead of a plot)
 
